feat: update status (#143)
* feat: update status

* fix: using return date for questionnaire dto instead of closing date